added final conclusion

--- a/Instructions/Starter_Code/regression_analysis.ipynb
+++ b/Instructions/Starter_Code/regression_analysis.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR CONCLUSIONS HERE!"
+    "Here  RMSE is low which is desired and means the model might be good. This is also indicated by the lower  difference between in sample RMSE and out of sample RMSE. But in-sample RMSE is higher than out-sample RMSE which is not typical of good model."
    ]
   },
   {
