formatted the conclusion

--- a/Starter_Code/time_series_analysis.ipynb
+++ b/Starter_Code/time_series_analysis.ipynb
@@ -877,22 +877,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on your time series analysis, would you buy the yen now?\n",
+    "- Based on your time series analysis, would you buy the yen now?\n",
     "\n",
-    "Is the risk of the yen expected to increase or decrease?\n",
+    "    This time series analysis,epecially the GARCH model, show that volatility for  the yen is going up which means higher risk and lower returns. So I would not buy the yen now.\n",
     "\n",
-    "Based on the model evaluation, would you feel confident in using these models for trading?"
+    "- Is the risk of the yen expected to increase or decrease?\n",
+    "\n",
+    "    Risk is expected to increase.\n",
+    "\n",
+    "- Based on the model evaluation, would you feel confident in using these models for trading?\n",
+    "\n",
+    "    These models are showing high AIC and BIC and also p-value is > 0.05. So I don't feel confident in using these models for trading.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time series analysis,epecially the GARCH model, show that volatility for  the yen is going up which means higher risk and lower returns. So I would not buy the yen now.\n",
     "\n",
-    "Risk is expected to increase.\n",
     "\n",
-    "These models are showing high AIC and BIC and also p-value is > 0.05. So I don't feel confident in using these models for trading.\n",
+    "\n",
     "\n"
    ]
   }
